eCSD Enhancements